<resources>
    <string name="app_name" translatable="false">wallabag</string>
    <string name="btnMarkRead">Mark as Read</string>
    <string name="btnMarkUnread">Mark as Unread</string>
    <string name="btnDelete">Delete</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="menuShare">Share</string>
    <string name="menuNext">Next article</string>
    <string name="menuPrevious">Previous article</string>
    <string name="menuDelete">Delete</string>
    <string name="menuOpenOriginal">Open original</string>
    <string name="menuCopyOriginalURL">Copy original URL</string>
    <string name="menuTTS">Text To Speech</string>
    <string name="ttsSpeed">Rate</string>
    <string name="ttsPitch">Pitch</string>
    <string name="ttsVolume">Volume</string>
    <string name="ttsLanguage">Choose Language</string>
    <string name="ttsVoice">Choose Voice</string>
    <string name="ttsAutoplayNextArticle">AutoPlay Next Article</string>
    <string name="ttsError">Text To Speech Error</string>
    <string name="ttsFastRewind">Fast Rewind</string>
    <string name="ttsPlayPause">Play / Pause</string>
    <string name="ttsFastForward">Fast Forward</string>
    <string name="ttsOptions">Options</string>
    <string name="menu_open_random_article">Open random article</string>
    <string name="menu_syncLocalChanges">Sync local changes</string>
    <string name="d_deleteArticle_title">Delete article?</string>
    <string name="d_deleteArticle_message">Are you sure you want to delete the article?</string>
    <string name="txtNetOffline">Make sure you are connected to the Internet first.</string>
    <string name="txtConfigNotSet">Set up the app before syncing.</string>
    <string name="txtUrlCopied">Article URL copied to clipboard</string>
    <string name="dialog_add_label">Add a new article</string>
    <string name="page_url">Page URL</string>
    <string name="share_article_title">Share article</string>
    <string name="share_text_extra">" via @wallabagapp"</string>
    <string name="positive_answer">Yes</string>
    <string name="negative_answer">No</string>
    <string name="no_articles">No articles</string>
    <string name="loading_article_text">Loading…</string>
    <string name="d_urlAction_title">Select an action for URL</string>
    <string name="d_urlAction_openInBrowser">Open in browser</string>
    <string name="d_urlAction_addToWallabag">Add to wallabag</string>
    <string name="d_urlAction_copyToClipboard">Copy to clipboard</string>
    <string name="dialog_switchSortOrder_label">Sort</string>
    <string name="d_switchSortOrder_DESC">DESC</string>
    <string name="d_switchSortOrder_ASC">ASC</string>
    <string name="d_switchSortOrder_creationDateDESC">Creation date DESC</string>
    <string name="d_switchSortOrder_creationDateASC">Creation date ASC</string>
    <string name="d_switchSortOrder_estimatedReadingTimeDESC">Reading time DESC</string>
    <string name="d_switchSortOrder_estimatedReadingTimeASC">Reading time ASC</string>
    <string name="ok">OK</string>
    <string name="d_add_fail_title">Fail</string>
    <string name="d_add_fail_text">Couldn\'t find a URL in share string:\n</string>
    <string name="d_configurationChanged_title">Parameters changed</string>
    <string name="d_configurationChanged_message">Test the connection to check if the new parameters work.</string>
    <string name="d_configurationChanged_answer_decline">Not now</string>
    <string name="d_configurationIsQuestionable_title">Problem detected</string>
    <string name="d_configurationIsQuestionable_message">There was a connection error recently. It is recommended to perform a connection test.</string>
    <string name="addLink_success_text">Added</string>
    <string name="settings_parametersAreOk">The parameters are fine</string>
    <string name="settings_parametersAutofilled">Parameters filled</string>
    <string name="testConnection_progressDialogMessage">Testing connection…</string>
    <string name="testConnection_errorMessage_incorrectUrl">Incorrect URL</string>
    <string name="testConnection_errorMessage_unsupportedServerVersion">The server version is unsupported</string>
    <string name="testConnection_errorMessage_wallabagNotFound">Could not find wallabag service — check URL</string>
    <string name="testConnection_errorMessage_httpAuth">HTTP authentication failed</string>
    <string name="testConnection_errorMessage_noCSRF">Could not parse login form</string>
    <string name="testConnection_errorMessage_incorrectCredentials">Can\'t log in — check username and password</string>
    <string name="testConnection_errorMessage_authProblems">Could not log in (usually caused by HTTP-redirections)</string>
    <string name="testConnection_errorMessage_unknownPageAfterLogin">Unknown page after login. Usually caused by two-factor authentication (which the app doesn\'t support yet).</string>
    <string name="testConnection_errorMessage_unknown">Unknown error</string>
    <string name="testConnection_errorMessage_unknownWithMessage">Unknown error: %s</string>
    <string name="d_testConnection_urlSuggestion_title">Consider changing URL</string>
    <string name="d_testConnection_urlSuggestion_acceptButton">Use suggested</string>
    <string name="d_testConnection_urlSuggestion_declineButton">Use mine</string>
    <string name="d_testConnection_urlSuggestion_cancelButton">Cancel</string>
    <string name="d_testConnection_urlSuggestion_message">Changing the URL to "%s" is recommended over using the entered one.</string>
    <string name="d_testConnection_urlSuggestion_message_mandatory">It is suggested to change URL to: "%s"</string>
    <string name="d_testConnection_fail_title">Connection test failed</string>
    <string name="getCredentials_progressDialogMessage">Getting API credentials…</string>
    <string name="d_getCredentials_title_fail">Couldn\'t get API credentials</string>
    <string name="d_getCredentials_title_message">Something went wrong. Check your Internet connection and try again.</string>
    <string name="checkCredentials_progressDialogMessage">Testing API access…</string>
    <string name="d_checkCredentials_title_fail">API access test failed</string>
    <string name="d_checkCredentials_errorMessage_notFound">API not found</string>
    <string name="d_checkCredentials_errorMessage_notFoundWithMessage">API not found: %s</string>
    <string name="d_checkCredentials_errorMessage_noAccess">No access to API</string>
    <string name="d_checkCredentials_errorMessage_noAccessWithMessage">No access to API: %s</string>
    <string name="d_checkCredentials_errorMessage_unknown">Unknown error</string>
    <string name="d_checkCredentials_errorMessage_unknownWithMessage">Unknown error: %s</string>
    <string name="wrongUsernameOrPassword_errorMessage">Couldn\'t log in. Maybe the username or password is wrong?</string>
    <string name="previousUpdateNotFinished">Previous update not finished yet</string>
    <string name="feedName_favorites">Favorites</string>
    <string name="feedName_archived">Archived</string>
    <string name="feedName_unread">Unread</string>
    <string name="articleList_favoriteMark">Favorite mark</string>
    <string name="articleList_ArchivedMark">Archived mark</string>
    <string name="noPreviousArticle">There is no previous article in current list</string>
    <string name="scrolledOverBottom">Scroll %d more time(s) past the bottom to mark article as read</string>
    <string name="markedAsRead"> Article marked as read</string>
    <string name="noNextArticle">No more articles in current list</string>
    <string name="themeName_light">Light</string>
    <string name="themeName_light_contrast">Light (high contrast)</string>
    <string name="themeName_eink">For e-ink displays</string>
    <string name="themeName_dark">Dark</string>
    <string name="themeName_dark_contrast">Dark (high contrast)</string>
    <string name="themeName_solarized">Solarized</string>
    <string name="themeName_day_night">Light/Dark (auto)</string>
    <string name="themeName_day_night_contrast">Light/Dark (high contrast - auto)</string>
    <string name="menu_readArticle_increaseFontSize">Increase font size</string>
    <string name="menu_readArticle_decreaseFontSize">Decrease font size</string>
    <string name="aboutText"><b>wallabag app for Android</b>\n
        wallabag is a self-hostable app, allowing you to not miss any content anymore. Click, save and read the extracted content at your leisure.</string>
    <string name="readSpeed">Read speed</string>
    <string name="voiceHeight">Voice pitch</string>
    <string name="readVolume">Read volume</string>
    <string name="menuDownloadAsFile">Download as file</string>
    <string name="dialog_title_downloadFileFormat">Select file format</string>
    <string name="downloadAsFilePathStart">Downloading article</string>
    <string name="downloadAsFileArticleDownloaded">Article downloaded</string>
    <string name="downloadAsFileArticleDownloadedDetail">Article %s downloaded</string>
    <string name="downloadAsFileTouchToOpen">Touch to open</string>
    <string name="downloadAsFileProgressDetail">wallabag downloads your article %1$s in %2$s</string>
    <string name="downloadAsFileProgress">wallabag downloads your article in %s</string>
    <string name="notification_updatingArticles">Updating articles</string>
    <string name="notification_updatingArticles_full">Performing full update</string>
    <string name="notification_updatingArticles_fast">Performing fast update</string>
    <string name="notification_sweepingDeletedArticles">Sweeping deleted articles</string>
    <string name="notification_downloadingImages">Downloading images…</string>
    <string name="menu_lists_search">Search</string>
    <string name="menu_lists_changeSortOrder">Change sort order</string>
    <string name="menu_lists_sweepDeletedArticles">\"Sweep\" deleted articles</string>
    <string name="menu_lists_fullUpdate">Full update</string>
    <string name="menu_changeTitle">Change title</string>
    <string name="menu_manageTags">Manage tags</string>
    <string name="manageTags_textField_hint">One or more (comma-separated) tags</string>
    <string name="manageTags_addNew">Add</string>
    <string name="manageTags_currentTags">Selected tags:</string>
    <string name="nav_main_articles">Articles</string>
    <string name="nav_main_tags">Tags</string>
    <string name="nav_main_tagged_articles">Tagged articles</string>
    <string name="nav_add">Add new entry</string>
    <string name="nav_other_settings">Settings</string>
    <string name="nav_other_about">About</string>
    <string name="pref_name_connection_username">Username</string>
    <string name="pref_name_connection_password">Password</string>
    <string name="connectionWizard_welcome_titleMessage">Welcome to wallabag.</string>
    <string name="connectionWizard_welcome_text">Set up a connection using the wizard first.</string>
    <string name="connectionWizard_welcome_rerunNotice">(You can re-run the connection wizard from \"Settings\" at any time.)</string>
    <string name="connectionWizard_welcome_prev">Skip</string>
    <string name="connectionWizard_welcome_next">Next</string>
    <string name="connectionWizard_provider_wallabagit_titleMessage">wallabag.it setup</string>
    <string name="connectionWizard_provider_wallabagit_prev">Back</string>
    <string name="connectionWizard_provider_wallabagit_next">Connect</string>
    <string name="connectionWizard_summary_titleMessage">All done.</string>
    <string name="connectionWizard_summary_text">Click to save and go to the main screen.</string>
    <string name="connectionWizard_summary_prev">Back</string>
    <string name="connectionWizard_summary_next">Save settings</string>
    <string name="articleEdit_openArticle">Open article</string>
</resources>