<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="start"
                android:text="@string/connectionWizard_summary_titleMessage"
                android:textAppearance="?textAppearanceHeadline3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/connectionWizard_summary_text"
                android:textAppearance="?textAppearanceSubtitle1" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/prev_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:insetLeft="16dp"
            android:insetRight="16dp"
            android:text="@string/connectionWizard_summary_prev" />

        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:insetLeft="16dp"
            android:insetRight="16dp"
            android:text="@string/connectionWizard_summary_next" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>