<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:weightSum="1">
                <androidx.appcompat.widget.AppCompatImageView
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:id="@+id/imageView"
                    android:src="@drawable/ic_wallabag_logo"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="start"
                android:text="@string/connectionWizard_welcome_titleMessage"
                android:textAppearance="?textAppearanceHeadline3" />

            <TextView
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAppearance="?textAppearanceSubtitle1"
                android:text="@string/connectionWizard_welcome_text"/>

            <TextView
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAppearance="?textAppearanceSubtitle1"
                android:text="@string/connectionWizard_welcome_rerunNotice"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/prev_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:insetLeft="16dp"
            android:insetRight="16dp"
            android:text="@string/connectionWizard_welcome_prev" />
        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:insetLeft="16dp"
            android:insetRight="16dp"
            android:text="@string/connectionWizard_welcome_next" />
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>